--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,306 @@
+ 
+/* -----------------------------------------------------------------------------------------------------------------------------> */
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  /*-------------------- whole body section------------------------------ */
+  body{
+    width: 100vw;
+    height: 100vh;
+    background-blend-mode: multiply;
+    background-attachment: fixed;
+    
+     
+  }
+  /* -----------------whloe container section meal planner------------------ */
+  .container{
+    width: 100%;
+    height: 100%; 
+    background-size: cover;
+    background-blend-mode: multiply;
+    position: relative;
+    background-attachment: fixed;
+  }
+  
+  /*-------------- header of the container-------------- */
+  .header{
+      background-color: coral;
+      height: 50px;
+      text-align: center;
+      border-radius: 12px;
+      border-color: rgb(155, 151, 149);
+      opacity: 1; 
+      margin-top: 1rem;
+      margin-bottom: 5rem;
+      box-shadow: 3px 3px rgb(185, 181, 181);
+  }
+  .nav-bar{
+      display: flex;
+      justify-content:flex-start;
+  }
+  #anchor-tag{
+      font-size: 2rem;
+      color: #fff;   
+  }
+  #food-logo{
+      width: 40px;
+      
+  }
+  /* -----------------form section---------------  */
+  #height{
+      background-color: rgb(228, 215, 215);
+      text-align: center;
+      padding: 0.4rem 1rem;
+      border-radius: 10px;
+      opacity: 0.5;
+      border-color: rgb(110, 105, 105);
+      font-size: 1.5rem;
+      font-weight: 200;
+      /* width: 230;
+      height: 3rem; */
+      font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+       
+  
+  }
+  #weight{
+      background-color: rgb(228, 215, 215);
+      text-align: center;
+      padding: 0.4rem 1rem;
+      border-radius: 10px;
+      opacity: 0.5;
+      border-color: rgb(110, 105, 105);
+      font-size: 1.5rem;
+      font-weight: 200;
+      /* width: 230;
+      height: 3rem; */
+      font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
+  #age{
+      background-color: rgb(228, 215, 215);
+      text-align: center;
+      padding: 0.4rem 1rem;
+      border-radius: 10px;
+      opacity: 0.5;
+      border-color: rgb(110, 105, 105);
+      font-size: 1.5rem;
+      font-weight: 200;
+      /* width: 230;
+      height: 3rem; */
+      font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
+   
+  .heigh-weight-age{
+      display: flex;
+      justify-content: space-evenly;
+      margin-bottom: 5rem;
+  }
+  
+  .gender-activation-level{
+      display: flex;
+      justify-content:space-evenly;
+      margin-bottom: 5rem;
+  }
+  
+  option{
+      display: flex;
+      align-items: center;
+  }
+  .gender{
+      background-color: rgb(228, 215, 215);
+      text-align: center;
+      padding: 0.4rem 4rem;
+      border-radius: 10px;
+      opacity: 0.5;
+      border-color: rgb(96, 92, 92);
+      font-size: 1.5rem;
+      font-weight: 200;
+      font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
+  .activity-level{
+      background-color: rgb(228, 215, 215);
+      text-align: center;
+      padding: 0.4em 3rem;
+      border-radius: 10px;
+      opacity: 0.5;
+      border-color: rgb(110, 105, 105);
+      font-size: 1.5rem;
+      font-weight: 200;
+      font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      
+  }
+   
+  .generate-meals{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+   
+  #generate-meals-button{
+      background-color: rgb(236, 12, 12);
+      /* background-color: rgb(228, 215, 215); */
+      text-align: center;
+      padding: 0.4rem;
+      border-radius: 10px;
+      opacity: 1;
+      border-color: rgb(110, 105, 105);
+      font-size: 1.4rem;
+      font-weight: 200;
+      /* width: 230;
+      height: 3rem; */
+      font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      color: #fff;
+  }
+  .form{
+      margin-bottom: 5rem;
+  }
+  
+  #loader {
+      height: 0;
+      width: 0;
+      padding: 15px;
+      border: 6px solid #ccc;
+      border-right-color: rgb(72, 73, 146);
+      border-radius: 22px;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+    }
+  /* ------------------Cards Section-------------------------------- */
+  .cards{
+      display: flex; 
+      justify-content: space-evenly;
+      margin-bottom: 4rem;
+      background-attachment: fixed;
+  }
+   
+  .card{
+      /* height: 400px;
+      width: 250px; */
+      background-repeat: no-repeat;
+      background-size: cover;
+      text-align: center;   
+      background-attachment: fixed;
+      
+   }
+   /* .image-container{
+      /* background-color: #f20909; */
+   /* }  */
+   .card-image{
+      height: 450px;
+      width: 350px;
+      background-repeat: no-repeat;
+      background-size: cover;
+      text-align: center;
+      border-radius: 10px;
+      /* background-size: cover; */
+      /* background-color: #ccc; */
+      /* background-attachment: fixed; */
+     }
+  /* -------------------------Recipe section--------------------------- */
+  .meal-calories-getRecipe{
+      position: relative; 
+      top: 70%;
+      /* padding: .5rem 2rem; */
+      width: 100%;
+      text-align: center;
+       /*----- override part ----*/
+      color: white;
+      overflow: hidden;
+      background: #C04848;   
+      background: linear-gradient(rgba(135, 10, 135, 0.8), rgb(192,72,72,0.8));
+      background: linear-gradient(rgb(72,0,72,0.8), rgb(192,72,72,0.8)); 
+      background-size: cover; 
+      background-repeat: no-repeat;
+  }
+  
+  .heading{
+      margin: 1rem;
+      color: rgb(236, 12, 12);
+  }
+  
+    #get-recipe-button1{
+    /* background-color: transparent; */
+      background-color: rgb(236, 12, 12);
+      text-align: center;
+      padding: 0.4rem;
+      margin-top: 1rem;
+      border-radius: 11px;
+      opacity: 1;
+      border-color: rgb(253, 251, 251);
+      font-size: 1rem;
+      font-weight: 300;
+      /* width: 230;
+      height: 3rem; */
+      /* font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
+      color: #fff;
+  
+    }
+    /* -------------------nutrients section------------ */
+  .nutrients{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 3rem;
+  }
+      #get-recipe-button2{
+          background-color: rgb(236, 12, 12);
+      text-align: center;
+      padding: 0.4rem;
+      margin-top: 1rem;
+      border-radius: 11px;
+      opacity: 1;
+      border-color: rgb(253, 251, 251);
+      font-size: 1rem;
+      font-weight: 300;
+      /* width: 230;
+      height: 3rem; */
+      /* font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
+      color: #fff;
+  
+      }
+    /* ---------------------------------------- get recipe table section-------------------------------------------------------- */
+    table{
+       /* display: flex;
+      width: 100%;
+      height: 50%; */
+      background-color: #c0b9b9;
+      background-attachment: fixed;
+      color: rgb(134, 126, 126);
+      font-size: 1.5rem;
+      margin-top: 2rem;
+      font-weight: 400;
+      padding: .5rem 3rem ;
+      border-radius: 11px;
+      /* box-shadow: #fff; */
+      box-shadow: 1px 3px 1px 4px rgb(145, 140, 140);
+      
+      /* padding-left: 5cm; */
+      /* margin-left: 10cm;
+      margin-right: 10cm; */
+      margin-bottom: 4rem;
+    } 
+   
+  th{
+      color: rgb(255, 3, 3);
+      padding: .5rem 4rem;
+    }
+  
+    td {
+      /* height: 80px; */
+      width: 300px;
+      text-align: center;
+      vertical-align: middle;
+    }
+  .get-recipe{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+  /* tbody{
+      display: flex;
+      justify-content: center;
+      align-items:center;
+  } */
